# haskellbook

./: .gitignore  .wakatime-project  README.md  anon.hs  area.hs  arith3Broken.hs  ch07_funcy.hs  ch08.hs  correctingSyntax.hs  eqInstances.hs  letwhere.hs  myAbs.hs  print3.hs  print3broken.hs  reverse.hs  sing.hs  typeClasses.hs  wordNumber.hs
advent-of-code-2021/: Main.hs  advent2021.cabal  day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs
ch01-ch06/: letwhere.hs  moodSwing.hs  palindrome.hs  strExercise.hs  test.hs  topOrLocal.hs  triple.hs  tupleExercise.hs  waxOn.hs
ch07/: arith4.hs  ch07_funcy.hs
ch08/: WordNumberTest.hs  ch08.cabal  ch08.hs  wordNumber.hs
ch09/: ch09.hs  cipher.hs  poemLines.hs  safeHead.hs
ch10/: ch10.hs  db.hs
ch11/: binaryTree.hs  ch11.hs  chExercises.hs  hutton.hs  phone.hs  tooMany.hs
ch12/: chExercises.hs
ch13/: chExercises.hs  palindrome.hs  person.hs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch15/: chExercises.hs  exercises.hs  semigroup.hs
ch16/: ReplaceExperiment.hs  chapterExercises.hs  exercises.hs  functorInstances.hs
ch17/: BadMonoid.hs  ChapterExercises.hs  ListApplicative.hs  ValidationApplicative.hs  ZipListApplicative.hs  exercises.hs  validation.hs
ch18/: ChapterExercises.hs  ChapterExercises2.hs  Cow.hs  InChapter.hs  SoftwareShop.hs
ch20/: ChapterExercises.hs  LibFunctions.hs
ch21/: ChapterExercises.hs  FetchDecode.hs  HttpStuff.hs  SkiFree.hs  Tree.hs
ch22/: InChapter.hs  Person.hs  ReaderPractice.hs
ch23/: FizzBuzz.hs  Moi.hs  RandomExample.hs  (+1 more)
(+45 files in other folders)
