name:                advent2021
version:             0.1.0.0
author:              Tanzim Mokammel
maintainer:          mtanzim@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Main
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5, split, containers
  hs-source-dirs:      .
  default-language:    Haskell2010
